--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta content='https://www.seawayphysio.com.au/images/logo.png' property='og:image'>
     <title>SeaWay Physiotherapy and Rehabilitation - Melbourne, Australia</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300|Raleway:100,300' rel='stylesheet' type='text/css'>
+    <link href='favicon.ico' rel='shortcut icon' type='image/x-icon'>
     <link href="/stylesheets/site.css" rel="stylesheet" />
   </head>
   <body>
