--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <meta content='https://www.seawayphysio.com.au/images/logo.png' property='og:image'>
     <title>SeaWay Physiotherapy and Rehabilitation - Melbourne, Australia</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300|Raleway:100,300' rel='stylesheet' type='text/css'>
-    <link href='favicon.ico' rel='shortcut icon' type='image/x-icon'>
+    <link href='/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
+    <link href='/apple-icon-60x60.png' rel='apple-touch-icon' sizes='60x60'>
+    <link href='/apple-icon-72x72.png' rel='apple-touch-icon' sizes='72x72'>
+    <link href='/apple-icon-76x76.png' rel='apple-touch-icon' sizes='76x76'>
+    <link href='/apple-icon-114x114.png' rel='apple-touch-icon' sizes='114x114'>
+    <link href='/apple-icon-120x120.png' rel='apple-touch-icon' sizes='120x120'>
+    <link href='/apple-icon-144x144.png' rel='apple-touch-icon' sizes='144x144'>
+    <link href='/apple-icon-152x152.png' rel='apple-touch-icon' sizes='152x152'>
+    <link href='/apple-icon-180x180.png' rel='apple-touch-icon' sizes='180x180'>
+    <link href='/android-icon-192x192.png' rel='icon' sizes='192x192' type='image/png'>
+    <link href='/favicon-32x32.png' rel='icon' sizes='32x32' type='image/png'>
+    <link href='/favicon-96x96.png' rel='icon' sizes='96x96' type='image/png'>
+    <link href='/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'>
+    <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
     <link href="/stylesheets/site.css" rel="stylesheet" />
   </head>
   <body>
