--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content='website' property='og:type'>
     <meta content='https://www.seawayphysio.com.au' property='og:url'>
     <meta content='https://www.seawayphysio.com.au/images/logo.png' property='og:image'>
-    <title>SeaWay Physiotherapy and Rehabilitation - Melbourne, Australia</title>
+    <title>SeaWay Physiotherapy and Rehabilitation | Diamond Creek VIC 3089, Australia</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300|Raleway:100,300' rel='stylesheet' type='text/css'>
     <link href='/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
     <link href='/apple-icon-60x60.png' rel='apple-touch-icon' sizes='60x60'>
@@ -49,7 +49,7 @@
           </h1>
           <div class='actions'>
             <a class='button-link' href='https://seaway-physiotherapy-and-rehabilitation.cliniko.com/bookings#service'>Book an appointment</a>
-            <a class='button-link' href='mailto:info@seawayphysio.com.au?subject=General%20Enquiry'>Email enquiry</a>
+            <a class='button-link' href='mailto:reception@seawayphysio.com.au?subject=General%20Enquiry'>Email enquiry</a>
           </div>
         </div>
       </section>
@@ -74,8 +74,8 @@
               <span itemprop='telephone'>(03) 8373 4646</span>
             </a>
             <br>
-            <a href='mailto:info@seawayphysio.com.au?subject=General%20Enquiry'>
-              Email: info@seawayphysio.com.au
+            <a href='mailto:reception@seawayphysio.com.au?subject=General%20Enquiry'>
+              Email: reception@seawayphysio.com.au
             </a>
           </p>
         </div>
