--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
             (Near Coles)
           </p>
           <p>
+            Phone:
             <a href='tel:0383734646'>
-              Phone:
               <span itemprop='telephone'>(03) 8373 4646</span>
             </a>
             <br>
+            Email:
             <a href='mailto:reception@seawayphysio.com.au?subject=General%20Enquiry'>
-              Email: reception@seawayphysio.com.au
+              reception@seawayphysio.com.au
             </a>
           </p>
         </div>
