Add JSON-LD data

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'>
     <meta content='SeaWay Physiotherapy and Rehabilitation' property='og:title'>
     <meta content='website' property='og:type'>
-    <meta content='https://www.seawayphysio.com.au' property='og:url'>
-    <meta content='https://www.seawayphysio.com.au/images/logo.png' property='og:image'>
+    <meta content='https://seawayphysio.com.au' property='og:url'>
+    <meta content='https://seawayphysio.com.au/images/logo.png' property='og:image'>
     <title>SeaWay Physiotherapy and Rehabilitation | Diamond Creek VIC 3089, Australia</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300|Raleway:100,300' rel='stylesheet' type='text/css'>
     <link href='/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
@@ -25,6 +25,50 @@
     <link href='/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'>
     <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
     <link href="/stylesheets/site.css" rel="stylesheet" />
+    <script type='application/ld+json'>
+      {
+        "@context": "http://schema.org",
+        "@type": "MedicalClinic",
+        "name": "SeaWay Physiotherapy and Rehabilitation",
+        "url": "https://seawayphysio.com.au",
+        "logo": "https://seawayphysio.com.au/images/logo.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "12/67 Hurstbridge Rd",
+          "addressLocality": "Diamond Creek",
+          "addressRegion": "VIC",
+          "postalCode": "3089",
+          "addressCountry": "AU"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": -37.673601,
+          "longitude": 145.1574563
+        },
+        "telephone": "(03) 8373 4646",
+        "potentialAction":{
+          "@type":"ReserveAction",
+          "target":{
+            "@type":"EntryPoint",
+            "urlTemplate":"https://seaway-physiotherapy-and-rehabilitation.cliniko.com/bookings#service",
+            "inLanguage":"en-AU",
+            "actionPlatform":[
+              "http://schema.org/DesktopWebPlatform",
+              "http://schema.org/IOSPlatform",
+              "http://schema.org/AndroidPlatform"
+            ]
+          },
+          "result":{
+            "@type":"EventReservation",
+            "name":"Book an appointment",
+            "provider":{
+              "@type":"Person",
+              "name":"Sie Wey Lim"
+            }
+          }
+        }
+      }
+    </script>
   </head>
   <body>
     <main>
@@ -55,7 +99,7 @@
       </section>
       <section class='contact-us' id='contact-us'>
         <iframe allowfullscreen class='map' frameborder='0' src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3839.0927860372803!2d145.15838660204554!3d-37.67307249440957!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6abd7b5040dc297b!2sSeaWay+Physiotherapy+and+Rehabilitation!5e0!3m2!1sen!2sau!4v1459320216582' style='border:0'></iframe>
-        <div class='details' itemscope itemtype='http://schema.org/LocalBusiness'>
+        <div class='details' itemscope itemtype='http://schema.org/MedicalClinic'>
           <p>
             <span itemprop='name'>SeaWay Physiotherapy and Rehabilitation</span>
             <br>
