--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta charset='utf-8'>
     <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'>
-    <meta content='SeaWay Physiotherapy and Rehabilitation' property='og:title'>
+    <meta content='Your Choice Physio Health Centre' property='og:title'>
     <meta content='website' property='og:type'>
-    <meta content='https://seawayphysio.com.au' property='og:url'>
-    <meta content='https://seawayphysio.com.au/images/logo.png' property='og:image'>
-    <title>SeaWay Physiotherapy and Rehabilitation | Diamond Creek VIC 3089, Australia</title>
+    <meta content='https://yourchoicehealth.com.au' property='og:url'>
+    <meta content='https://yourchoicehealth.com.au/images/logo.png' property='og:image'>
+    <title>Your Choice Physio and Health Centre | Diamond Creek VIC 3089, Australia</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300|Raleway:100,300' rel='stylesheet' type='text/css'>
     <link href='/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
     <link href='/apple-icon-60x60.png' rel='apple-touch-icon' sizes='60x60'>
@@ -29,9 +29,9 @@
       {
         "@context": "http://schema.org",
         "@type": "MedicalClinic",
-        "name": "SeaWay Physiotherapy and Rehabilitation",
-        "url": "https://seawayphysio.com.au",
-        "logo": "https://seawayphysio.com.au/images/logo.png",
+        "name": "Your Choice Physio and Health Centre",
+        "url": "https://yourchoicehealth.com.au",
+        "logo": "https://yourchoicehealth.com.au/images/logo.png",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "12/67 Hurstbridge Rd",
@@ -74,7 +74,7 @@
     <main>
       <nav class='main-nav'>
         <div class='brand'>
-          <a href='/'>SeaWay Physiotherapy and Rehabilitation</a>
+          <a href='/'>Your Choice Physio and Health Centre</a>
         </div>
         <img alt='Logo' class='logo' src='images/logo.png' valign='middle'>
         <ul class='menu'>
@@ -93,7 +93,7 @@
           </h1>
           <div class='actions'>
             <a class='button-link' href='https://seaway-physiotherapy-and-rehabilitation.cliniko.com/bookings#service'>Book an appointment</a>
-            <a class='button-link' href='mailto:reception@seawayphysio.com.au?subject=General%20Enquiry'>Email enquiry</a>
+            <a class='button-link' href='mailto:info@yourchoicehealth.com.au?subject=General%20Enquiry'>Email enquiry</a>
           </div>
         </div>
       </section>
@@ -101,7 +101,7 @@
         <iframe allowfullscreen class='map' frameborder='0' src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3839.0927860372803!2d145.15838660204554!3d-37.67307249440957!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6abd7b5040dc297b!2sSeaWay+Physiotherapy+and+Rehabilitation!5e0!3m2!1sen!2sau!4v1459320216582' style='border:0'></iframe>
         <div class='details' itemscope itemtype='http://schema.org/MedicalClinic'>
           <p>
-            <span itemprop='name'>SeaWay Physiotherapy and Rehabilitation</span>
+            <span itemprop='name'>Your Choice Physio and Health Centre</span>
             <br>
             Practitioner: Sie Wey Lim
           </p>
@@ -119,15 +119,15 @@
             </a>
             <br>
             Email:
-            <a href='mailto:reception@seawayphysio.com.au?subject=General%20Enquiry'>
-              reception@seawayphysio.com.au
+            <a href='mailto:info@yourchoicehealth.com.au?subject=General%20Enquiry'>
+              info@yourchoicehealth.com.au
             </a>
           </p>
         </div>
       </section>
     </main>
     <footer class='site-footer'>
-      <div class='copyright'>Copyright © 2016 SeaWay Physiotherapy and Rehabilitation</div>
+      <div class='copyright'>Copyright © 2018 Your Choice Physio and Health Centre</div>
     </footer>
   </body>
 </html>
