Update new location

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'>
     <meta content='Your Choice Physio Health Centre' property='og:title'>
     <meta content='website' property='og:type'>
-    <meta content='https://yourchoicehealth.com.au' property='og:url'>
-    <meta content='https://yourchoicehealth.com.au/images/logo.png' property='og:image'>
-    <title>Your Choice Physio and Health Centre | Diamond Creek VIC 3089, Australia</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300|Raleway:100,300' rel='stylesheet' type='text/css'>
+    <meta content='https://www.yourchoicehealth.com.au' property='og:url'>
+    <meta content='https://www.yourchoicehealth.com.au/images/logo.png' property='og:image'>
+    <meta content='Solutions to sport injury, work injury, arthritis and back pain' property='description'>
+
+    <title>Your Choice Physio and Health Centre | Physiotherapy and Massage Therapy</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:500,400,300|Raleway:400' rel='stylesheet' type='text/css'>
     <link href='/apple-icon-57x57.png' rel='apple-touch-icon' sizes='57x57'>
     <link href='/apple-icon-60x60.png' rel='apple-touch-icon' sizes='60x60'>
     <link href='/apple-icon-72x72.png' rel='apple-touch-icon' sizes='72x72'>
@@ -30,22 +33,22 @@
         "@context": "http://schema.org",
         "@type": "MedicalClinic",
         "name": "Your Choice Physio and Health Centre",
-        "url": "https://yourchoicehealth.com.au",
-        "logo": "https://yourchoicehealth.com.au/images/logo.png",
+        "url": "https://www.yourchoicehealth.com.au",
+        "logo": "https://www.yourchoicehealth.com.au/images/logo.png",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "12/67 Hurstbridge Rd",
-          "addressLocality": "Diamond Creek",
+          "streetAddress": "14 Lorimer Street",
+          "addressLocality": "Greensborough",
           "addressRegion": "VIC",
-          "postalCode": "3089",
+          "postalCode": "3088",
           "addressCountry": "AU"
         },
         "geo": {
           "@type": "GeoCoordinates",
-          "latitude": -37.673601,
-          "longitude": 145.1574563
+          "latitude": -37.702580,
+          "longitude": 145.100589
         },
-        "telephone": "(03) 8373 4646",
+        "telephone": "0406 418 154",
         "potentialAction":{
           "@type":"ReserveAction",
           "target":{
@@ -82,52 +85,129 @@
             <a href='https://seaway-physiotherapy-and-rehabilitation.cliniko.com/bookings#service'>Book an appointment</a>
           </li>
           <li class='menu-item'>
-            <a href='#contact-us'>Contact us</a>
+            <a href='#about-us'>Contact us</a>
           </li>
         </ul>
       </nav>
       <section class='hero'>
         <div class='box'>
           <h1 class='tagline'>
-            Your Trusted Local Practitioner
+            Solutions to sport injury, work injury, arthritis and back pain
           </h1>
+          <div class='lead'>
+            Services:
+            <ul>
+              <li>Hands on one on one treatment</li>
+              <li>Post ingury or post surgery rehabilitation</li>
+              <li>Injury prevention</li>
+              <li>Massage therapy</li>
+            </ul>
+          </div>
           <div class='actions'>
             <a class='button-link' href='https://seaway-physiotherapy-and-rehabilitation.cliniko.com/bookings#service'>Book an appointment</a>
             <a class='button-link' href='mailto:info@yourchoicehealth.com.au?subject=General%20Enquiry'>Email enquiry</a>
           </div>
         </div>
       </section>
-      <section class='contact-us' id='contact-us'>
-        <iframe allowfullscreen class='map' frameborder='0' src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3839.0927860372803!2d145.15838660204554!3d-37.67307249440957!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6abd7b5040dc297b!2sSeaWay+Physiotherapy+and+Rehabilitation!5e0!3m2!1sen!2sau!4v1459320216582' style='border:0'></iframe>
-        <div class='details' itemscope itemtype='http://schema.org/MedicalClinic'>
-          <p>
-            <span itemprop='name'>Your Choice Physio and Health Centre</span>
-            <br>
-            Practitioner: Sie Wey Lim
-          </p>
-          <p itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
-            <span itemprop='streetAddress'>Shop 12, 67 Main Hurstbridge Road</span>
-            <br>
-            <span itemprop='addressLocality'>Diamond Creek 3089</span>
-            <br>
-            (Near Coles)
-          </p>
-          <p>
-            Phone:
-            <a href='tel:0383734646'>
-              <span itemprop='telephone'>(03) 8373 4646</span>
-            </a>
-            <br>
-            Email:
-            <a href='mailto:info@yourchoicehealth.com.au?subject=General%20Enquiry'>
-              info@yourchoicehealth.com.au
-            </a>
-          </p>
+      <section class="about-us" id="about-us">
+        <header>
+          <h2>Contact Us</h2>
+        </header>
+        <strong>Your Choice Physio and Health Centre</strong>
+        <p>
+          Phone:
+          <a href='tel:0406418154'>
+            <span itemprop='telephone'>0406 418 154</span>
+          </a>
+          <br>
+          Email:
+          <a href='mailto:info@yourchoicehealth.com.au?subject=General%20Enquiry'>
+            info@yourchoicehealth.com.au
+          </a>
+        </p>
+        <p><strong>Practitioners</strong></p>
+        <div class="practitioner" itemscope itemtype="http://schema.org/Person">
+          <strong><span itemprop="name">Sie Wey Lim</span></strong>
+          <br/>
+          <span itemprop="jobTitle">Principal Physiotherapist</span>
+          <br/>
+          <span itemprop="address">Practice Location: 14 Lorimer Street, Greensborough 3088</span>
+        </div>
+        <div class="practitioner" itemscope itemtype="http://schema.org/Person">
+          <strong><span itemprop="name">Michael Tsakmakis</span></strong>
+          <br/>
+          <span itemprop="jobTitle">Physiotherapist</span>
+          <br/>
+          <span itemprop="address">Practice Location: Shop 12, 67 Main Hurstbridge Road, Diamond Creek 3089</span>
+        </div>
+        <div class="practitioner" itemscope itemtype="http://schema.org/Person">
+          <strong><span itemprop="name">Sean Chen</span></strong>
+          <br/>
+          <span itemprop="jobTitle">Massage Therapist</span>
+          <br/>
+          <span itemprop="address">Practice Location: 14 Lorimer Street, Greensborough 3088</span>
+        </div>
+      </section>
+      <section class="locations">
+        <header>
+          <h2>Our Locations</h2>
+        </header>
+        <div class="location">
+          <iframe class='map' frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ8-uXtFtI1moRXFb0N6ovm1A&key=AIzaSyBH8KM3vOTAUHMkV6yPuhLFLwNeDrv_stk" allowfullscreen></iframe>
+          <div class='details' itemscope itemtype='http://schema.org/MedicalClinic'>
+            <p itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
+              <span itemprop="name">Your Choice Physio and Health Centre</span>
+              <br/>
+              <span itemprop='streetAddress'>14 Lorimer Street</span>
+              <br/>
+              <span itemprop='addressLocality'>Greensborough</span>
+              <span itemprop='addressRegion'>VIC</span>
+              <span itemprop='postalCode'>3088</span>
+            </p>
+            <p>
+              Mobile:
+              <a href='tel:0406418154'>
+                <span itemprop='telephone'>0406 418 154</span>
+              </a>
+            </p>
+          </div>
+        </div>
+        <hr noshade />
+        <div class="location">
+          <iframe allowfullscreen class='map' frameborder='0' src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3839.0927860372803!2d145.15838660204554!3d-37.67307249440957!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6abd7b5040dc297b!2sSeaWay+Physiotherapy+and+Rehabilitation!5e0!3m2!1sen!2sau!4v1459320216582' style='border:0'></iframe>
+          <div class='details' itemscope itemtype='http://schema.org/MedicalClinic'>
+            <p itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
+              <span itemprop="name">The Local Doctor</span>
+              <br/>
+              <span itemprop='streetAddress'>Shop 12, 67 Main Hurstbridge Road</span>
+              <br/>
+              <span itemprop='addressLocality'>Diamond Creek</span>
+              <span itemprop='addressRegion'>VIC</span>
+              <span itemprop='postalCode'>3089</span>
+              <br/>
+              (Near Coles)
+            </p>
+            <p>
+              Mobile:
+              <a href='tel:0406418154'>
+                <span itemprop='telephone'>0406 418 154</span>
+              </a>
+              <br>
+              Phone:
+              <a href='tel:0383734646'>
+                <span itemprop='telephone'>(03) 8373 4646</span>
+              </a>
+            </p>
+          </div>
         </div>
       </section>
     </main>
     <footer class='site-footer'>
       <div class='copyright'>Copyright © 2018 Your Choice Physio and Health Centre</div>
+      <div class='social'>
+        <a href="https://www.instagram.com/yourchoicehealth/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+      </div>
     </footer>
+    <script src="https://unpkg.com/ionicons@4.4.7/dist/ionicons.js"></script>
   </body>
 </html>
