--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <br/>
           <span itemprop="jobTitle">Physiotherapist</span>
           <br/>
-          <span itemprop="address">Practice Location: Shop 12, 67 Main Hurstbridge Road, Diamond Creek 3089</span>
+          <span itemprop="address">Practice Location: 14 Lorimer Street, Greensborough 3088</span>
         </div>
         <div class="practitioner" itemscope itemtype="http://schema.org/Person">
           <strong><span itemprop="name">Sean Chen</span></strong>
@@ -168,34 +168,6 @@
               Mobile:
               <a href='tel:0406418154'>
                 <span itemprop='telephone'>0406 418 154</span>
-              </a>
-            </p>
-          </div>
-        </div>
-        <hr noshade />
-        <div class="location">
-          <iframe allowfullscreen class='map' frameborder='0' src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3839.0927860372803!2d145.15838660204554!3d-37.67307249440957!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6abd7b5040dc297b!2sSeaWay+Physiotherapy+and+Rehabilitation!5e0!3m2!1sen!2sau!4v1459320216582' style='border:0'></iframe>
-          <div class='details' itemscope itemtype='http://schema.org/MedicalClinic'>
-            <p itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
-              <span itemprop="name">The Local Doctor</span>
-              <br/>
-              <span itemprop='streetAddress'>Shop 12, 67 Main Hurstbridge Road</span>
-              <br/>
-              <span itemprop='addressLocality'>Diamond Creek</span>
-              <span itemprop='addressRegion'>VIC</span>
-              <span itemprop='postalCode'>3089</span>
-              <br/>
-              (Near Coles)
-            </p>
-            <p>
-              Mobile:
-              <a href='tel:0406418154'>
-                <span itemprop='telephone'>0406 418 154</span>
-              </a>
-              <br>
-              Phone:
-              <a href='tel:0383734646'>
-                <span itemprop='telephone'>(03) 8373 4646</span>
               </a>
             </p>
           </div>
