--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         "logo": "https://www.yourchoicehealth.com.au/images/logo.png",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "14 Lorimer Street",
+          "streetAddress": "1/30 Lorimer Street",
           "addressLocality": "Greensborough",
           "addressRegion": "VIC",
           "postalCode": "3088",
@@ -131,14 +131,14 @@
           <br/>
           <span itemprop="jobTitle">Principal Physiotherapist</span>
           <br/>
-          <span itemprop="address">Practice Location: 14 Lorimer Street, Greensborough 3088</span>
+          <span itemprop="address">Practice Location: 1/30 Lorimer Street, Greensborough 3088</span>
         </div>
         <div class="practitioner" itemscope itemtype="http://schema.org/Person">
           <strong><span itemprop="name">Sean Chen</span></strong>
           <br/>
           <span itemprop="jobTitle">Massage Therapist</span>
           <br/>
-          <span itemprop="address">Practice Location: 14 Lorimer Street, Greensborough 3088</span>
+          <span itemprop="address">Practice Location: 1/30 Lorimer Street, Greensborough 3088</span>
         </div>
       </section>
       <section class="locations">
@@ -151,7 +151,7 @@
             <p itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
               <span itemprop="name">Your Choice Physio and Health Centre</span>
               <br/>
-              <span itemprop='streetAddress'>14 Lorimer Street</span>
+              <span itemprop='streetAddress'>1/30 Lorimer Street</span>
               <br/>
               <span itemprop='addressLocality'>Greensborough</span>
               <span itemprop='addressRegion'>VIC</span>
@@ -168,7 +168,7 @@
       </section>
     </main>
     <footer class='site-footer'>
-      <div class='copyright'>Copyright © 2018 Your Choice Physio and Health Centre</div>
+      <div class='copyright'>Copyright © 2023 Your Choice Physio and Health Centre</div>
       <div class='social'>
         <a href="https://www.instagram.com/yourchoicehealth/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
       </div>
