--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         "logo": "https://www.yourchoicehealth.com.au/images/logo.png",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "1/30 Lorimer Street",
+          "streetAddress": "37 Greenhill Road",
           "addressLocality": "Greensborough",
           "addressRegion": "VIC",
           "postalCode": "3088",
@@ -45,8 +45,8 @@
         },
         "geo": {
           "@type": "GeoCoordinates",
-          "latitude": -37.702580,
-          "longitude": 145.100589
+          "latitude": -37.69740869012533,
+          "longitude": 145.11639682544433
         },
         "telephone": "0406 418 154",
         "potentialAction":{
@@ -98,7 +98,7 @@
             Services:
             <ul>
               <li>Hands on one on one treatment</li>
-              <li>Post ingury or post surgery rehabilitation</li>
+              <li>Post injury or post surgery rehabilitation</li>
               <li>Injury prevention</li>
               <li>Massage therapy</li>
             </ul>
@@ -131,14 +131,7 @@
           <br/>
           <span itemprop="jobTitle">Principal Physiotherapist</span>
           <br/>
-          <span itemprop="address">Practice Location: 1/30 Lorimer Street, Greensborough 3088</span>
-        </div>
-        <div class="practitioner" itemscope itemtype="http://schema.org/Person">
-          <strong><span itemprop="name">Sean Chen</span></strong>
-          <br/>
-          <span itemprop="jobTitle">Massage Therapist</span>
-          <br/>
-          <span itemprop="address">Practice Location: 1/30 Lorimer Street, Greensborough 3088</span>
+          <span itemprop="address">Practice Location: 37 Greenhill Road, Greensborough 3088</span>
         </div>
       </section>
       <section class="locations">
@@ -146,12 +139,12 @@
           <h2>Our Locations</h2>
         </header>
         <div class="location">
-          <iframe class='map' frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d197.29554934933952!2d145.0992239986693!3d-37.70256797472735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6360aad2a6e55%3A0x6abd7b5040dc297b!2sYour%20Choice%20Physiotherapy%20and%20Health%20Centre!5e0!3m2!1sen!2sau!4v1673506919732!5m2!1sen!2sau" allowfullscreen></iframe>
+          <iframe class='map' frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1578.4771832239824!2d145.1158872057545!3d-37.69727074042987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad64835693686ef%3A0xa20fdc3f9126fe90!2s37%20Greenhill%20Rd%2C%20Greensborough%20VIC%203088!5e0!3m2!1sen!2sau!4v1714124268809!5m2!1sen!2sau" allowfullscreen></iframe>
           <div class='details' itemscope itemtype='http://schema.org/MedicalClinic'>
             <p itemprop='address' itemscope itemtype='http://schema.org/PostalAddress'>
               <span itemprop="name">Your Choice Physio and Health Centre</span>
               <br/>
-              <span itemprop='streetAddress'>1/30 Lorimer Street</span>
+              <span itemprop='streetAddress'>37 Greenhill Road</span>
               <br/>
               <span itemprop='addressLocality'>Greensborough</span>
               <span itemprop='addressRegion'>VIC</span>
@@ -168,7 +161,7 @@
       </section>
     </main>
     <footer class='site-footer'>
-      <div class='copyright'>Copyright © 2023 Your Choice Physio and Health Centre</div>
+      <div class='copyright'>Copyright © 2024 Your Choice Physio and Health Centre</div>
       <div class='social'>
         <a href="https://www.instagram.com/yourchoicehealth/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
       </div>
